--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "AFL-3.0"
   ],
   "require": {
-    "php": "~5.5.0|~7.0",
+    "php": "~5.5.0|~7.0|~8",
     "magento/magento-composer-installer": "*"
   },
   "autoload": {
